grammar.js
  inline: $ => [
    $._infix_expression
  ],

    module: $ => choice(
      seq(
        repeat($.language_pragma),
        'module',
        choice($.qualified_module_identifier, $.module_identifier),
        optional(choice($.warning_pragma, $.deprecated_pragma)),
        optional($.module_exports),
        alias($._top_where, $.where)
      ),
      seq(
        repeat($.language_pragma),
        repeat(seq($._top_declaration, choice(';', $._layout_semicolon)))
      )
    ),

    _declarations: $ => choice(
      seq(
        '{',
        repeat(seq($._declaration, optional($._terminal))),
        '}'
      ),
      seq(
        $._layout_open_brace,
        repeat(seq($._declaration, choice($._terminal, $._layout_semicolon))),
        $._layout_close_brace
      )
    ),

    all_constructors: $ => '(..)',

    import_declaration: $ => seq(
      'import',
      optional($.source_pragma),
      $._import_declaration
    ),

    _import_declaration: $ => seq(
      choice(
        $.import_alias,
        $.qualified_module_identifier,
        $.module_identifier
      ),
      optional(choice($.import_spec, $.hidden_import_spec))
    ),

    import_spec: $ => seq(
      '(',
      optional(sep1(',', alias($._import, $.import))),
      ')'
    ),

    _import: $ => choice(
      $._variable,
      $._constructor,
      seq(
        $.type_constructor_identifier,
        optional(choice(
          $.all_constructors,
          seq(
            '(',
            optional(sep1(',', choice($._variable, $._constructor))),
            ')'
          )
        ))
      ),
      seq(
        $.type_class_identifier,
        optional(choice(
          $.all_constructors,
          seq(
            '(',
            optional(sep1(',', $._variable)),
            ')'
          )
        ))
      )
    ),

    bidirectional_pattern_synonym: $ => prec.left(seq(
      'pattern',
      $.constructor_pattern,
      '=',
      $.function_body
    )),

    unidirectional_pattern_synonym: $ => prec.left(seq(
      'pattern',
      $.constructor_pattern,
      '<-',
      $.function_body
    )),

    _top_declaration: $ => choice(
      $.import_declaration,
      $.qualified_import_declaration,
      $.type_synonym_declaration,
      $.algebraic_datatype_declaration,
      $.newtype_declaration,
      $.type_class_declaration,
      $.type_class_instance_declaration,
      $.default_declaration,
      $.foreign_import_declaration,
      $.foreign_export_declaration,
      $.standalone_deriving_declaration,
      $._declaration
    ),

    function_declaration: $ => seq(
      $._funlhs,
      choice(
        repeat1($.function_guard_pattern),
        seq('=', $.function_body)
      )
    ),

    _funlhs: $ => prec.left(choice(
      seq($._variable, repeat($._a_pattern)),
      seq($._pattern, $._op, $._pattern),
      seq($._funlhs, $._a_pattern, repeat($._a_pattern))
    )),

    _a_pattern: $ => prec.left(choice(
      $._variable,
      $.as_pattern,
      $._general_constructor,
      $.labeled_pattern,
      $._literal,
      $.wildcard,
      $.parenthesized_pattern,
      $.tuple_pattern,
      $.list_pattern,
      $.irrefutable_pattern
    )),

    tuple_pattern: $ => seq(
      '(',
      alias($._pattern, $.pattern),
      ',',
      sep1(',', alias($._pattern, $.pattern)),
      ')'
    ),

    list_pattern: $ => seq(
      '[',
      sep1(',', alias($._pattern, $.pattern)),
      ']'
    ),

    parenthesized_pattern: $ => seq(
      '(',
      $._pattern,
      ')'
    ),

    _pattern: $ => prec.left(choice(
      seq($._lpat, $._op, $._pattern),
      $._lpat
    )),

    constructor_pattern: $ => prec.left(seq(
      $._general_constructor,
      repeat1($._a_pattern),
    )),

    _general_constructor: $ => choice(
      $._constructor,
      $._qualified_constructor,
      $.unit_constructor,
      $.list_constructor,
      $.function_constructor,
      $.tupling_constructor
    ),

    _general_type_constructor: $ => choice(
      $.type_constructor_identifier,
      $.qualified_type_constructor_identifier,
      $.unit_constructor,
      $.list_constructor,
      $.function_constructor,
      $.tupling_constructor,
      $.promoted
    ),

    _expression: $ => prec.right(choice(
      $._infix_expression,
      $.expression_type_signature
    )),

    _infix_expression: $ => choice(
      $._lexp,
      $.prefix_negation,
      $.infix_operator_application
    ),

    infix_operator_application: $ => prec.right(seq(
      $._lexp,
      $._qualified_operator,
      $._infix_expression
    )),

    _lexp: $ => choice(
      $.lambda,
      $.let_expression,
      $.conditional_expression,
      $.case_expression,
      $.do,
      $.function_application,
      $._a_expression,
      $.quasi_quotation
    ),

    function_body: $ => choice(
      seq(
        $._expression,
        optional($.where)
      ),
      seq(
        $.function_guard_pattern,
        optional($.where)
      )
    ),

    _top_where: $ => seq(
      'where',
      $._top_declarations
    ),

    where: $ => seq(
      'where',
      $._declarations
    ),

    parenthesized_expression: $ => seq(
      '(',
      $._expression,
      ')'
    ),

    function_application: $ => prec.left(seq(
      choice($.function_application, $._a_expression),
      choice($.function_application, $._a_expression)
    )),

    _a_expression: $ => choice(
      $._general_constructor,
      $._qualified_variable,
      $._variable,
      $._literal,
      $.parenthesized_expression,
      $.tuple_expression,
      $.list_expression,
      $.arithmetic_sequence,
      $.list_comprehension,
      $.left_operator_section,
      $.right_operator_section,
      $.labeled_construction,
      $.labeled_update,
      prec.dynamic(1, $.quasi_quotation)
    ),

    _terminal: $ => ';',

    type_class_declaration: $ => seq(
      'class',
      optional($.scontext),
      seq(
        $.type_class_identifier,
        repeat($.type_variable_identifier)
      ),
      $.where
    ),

    type_class_instance_declaration: $ => seq(
      'instance',
      optional(choice(
        $.overlaps_pragma,
        $.overlapping_pragma,
        $.overlappable_pragma,
        $.incoherent_pragma
      )),
      optional($.scontext),
      choice($.qualified_type_class_identifier, $.type_class_identifier),
      $.instance,
      $.where
    ),

    instance: $ => repeat1(choice(
      $._general_type_constructor,
      $.parenthesized_instance,
      $.tuple_instance,
      $.list_instance,
      $.function_type_instance,
      $.type_variable_identifier
    )),

    parenthesized_instance: $ => seq(
      '(',
      $._general_type_constructor,
      repeat($.type_variable_identifier),
      ')'
    ),

    list_instance: $ => seq(
      '[',
      choice($.type_variable_identifier, $._general_type_constructor),
      ']'
    ),

    type_signature: $ => seq(
      sep1(',', $._variable),
      alias('::', $.annotation),
      optional($.context),
      optional($.scoped_type_variables),
      $._type_pattern
    ),

    pattern_type_signature: $ => seq(
      'pattern',
      $._constructor,
      alias('::', $.annotation),
      $._type_pattern
    ),

    _type_pattern: $ => prec.left(choice(
      $._type,
      $.function_type,
      $.infix_type_operator_application
    )),

    _type: $ => prec.left(repeat1($._atype)),

    function_type: $ => prec.right(seq(
      alias($._type, $.type),
      '->',
      choice(alias($._type, $.type), $.function_type)
    )),

    _atype: $ => choice(
      $._general_type_constructor,
      $.type_variable_identifier,
      $.tuple_type,
      $.list_type,
      $.parenthesized_constructor
    ),

    tuple_type: $ => seq(
      '(',
      $._type_pattern,
      ',',
      sep1(',', $._type_pattern),
      ')'
    ),

    parenthesized_constructor: $ => seq(
      '(',
      $._type_pattern,
      ')'
    ),

    algebraic_datatype_declaration: $ => seq(
      'data',
      optional($.context),
      $._simple_type,
      optional(
        seq(
          '=',
          $.constructors,
          optional($.deriving)
        )
      )
    ),

    _simple_type: $ => seq(
      $.type_constructor_identifier,
      repeat($.type_variable_identifier)
    ),

    scontext: $ => seq(
      choice(
        $.simple_class,
        seq(
          '(',
          optional(sep1(',', $.simple_class)),
          ')'
        ),
      ),
      '=>'
    ),

    context: $ => prec(1, seq(
      choice(
        $.class,
        seq(
          '(',
          optional(sep1(',', $.class)),
          ')'
        ),
      ),
      '=>'
    )),

    simple_class: $ => seq(
      choice($.qualified_type_class_identifier, $.type_class_identifier),
      repeat1($.type_variable_identifier),
      optional($.parenthesized_type_variables)
    ),

    class: $ => choice(
      seq(
        choice(
          $.constructor_identifier,
          $.qualified_constructor_identifier
        ),
        $.type_variable_identifier
      ),
      seq(
        choice(
          $.constructor_identifier,
          $.qualified_constructor_identifier
        ),
        '(',
        $.type_variable_identifier,
        repeat1($._atype),
        ')'
      )
    ),

    constructors: $ => sep1(
      '|',
      choice(
        $.data_constructor,
        $.infix_data_constructor,
        $.record_data_constructor
      )
    ),

    data_constructor: $ => seq(
      $._constructor,
      repeat(
        seq(
          optional(
            choice(
              $.unpack_pragma,
              $.no_unpack_pragma
            )
          ),
          choice(
            $.strict_type,
            $._atype
          )
        )
      )
    ),

    strict_type: $ => seq(
      '!',
      $._type_pattern
    ),

    _variable: $ => choice(
      $.variable_identifier,
      seq(
        '(',
        $.variable_operator,
        ')'
      )
    ),

    _qualified_variable: $ => choice(
      $.qualified_variable_identifier,
      seq(
        '(',
        $.qualified_variable_operator,
        ')'
      )
    ),

    _constructor: $ => choice(
      $.constructor_identifier,
      seq(
        '(',
        $.constructor_operator,
        ')'
      )
    ),

    module_identifier: $ => $._module_identifier,

    constructor_identifier: $ => $._constructor_identifier,

    type_constructor_identifier: $ => $._constructor_identifier,

    // Higher precedence here to disambiguate scontext
    type_class_identifier: $ => $._constructor_identifier,

    _constructor_identifier: $ => /[A-Z](\w|')*/,

    _module_identifier: $ => /[A-Z](\w|')*/,

    variable_identifier: $ => $._variable_identifier,

    type_variable_identifier: $ => $._variable_identifier,

    variable_symbol: $ => token(
      seq(
        variable_symbol,
        repeat(choice(restricted_variable_symbol, variable_symbol))
      )
    ),

    variable_operator: $ => choice(
      $.variable_symbol,
      $.infix_variable_identifier,
      $.qualified_infix_variable_identifier
    ),

    _qualified_operator: $ => choice(
      $.qualified_variable_operator,
      $.variable_operator,
      $.qualified_constructor_operator,
      $.constructor_operator
    ),

    _variable_identifier: $ => /[_a-z](\w|')*/,

    inline_pragma: $ => seq(
      '{-#',
      'INLINE',
      optional(alias('CONLIKE', $.constructor_like)),
      optional(choice($.phase_control, $.eager_phase_control)),
      choice($._qualified_variable, $._variable),
      '#-}'
    ),

    inlinable_pragma: $ => seq(
      '{-#',
      choice('INLINABLE', 'INLINEABLE'),
      optional(choice($.phase_control, $.eager_phase_control)),
      choice($._qualified_variable, $._variable),
      '#-}'
    ),

    no_inline_pragma: $ => seq(
      '{-#',
      'NOINLINE',
      optional(alias('CONLIKE', $.constructor_like)),
      optional(choice($.phase_control, $.eager_phase_control)),
      choice($._qualified_variable, $._variable),
      '#-}'
    ),

    specialization_pragma: $ => seq(
      '{-#',
      choice('SPECIALIZE', 'SPECIALISE'),
      optional(choice(alias('INLINE', $.inline), alias('NOINLINE', $.noinline))),
      optional($.phase_control),
      choice(
        sep1(',', $.spec),
        $.instance_spec
      ),
      '#-}'
    ),

    source_pragma: $ => seq(
      '{-#',
      'SOURCE',
      '#-}'
    ),

    include_pragma: $ => seq(
      '{-#',
      'INCLUDE',
       $.header_file,
      '#-}'
    ),

    warning_pragma: $ => seq(
      '{-#',
      'WARNING',
      optional(sep1(',', $.variable_identifier)),
      choice(
        alias($.string, $.warning_message),
        $.warning_message_list
      ),
      '#-}'
    ),

    deprecated_pragma: $ => seq(
      '{-#',
      'DEPRECATED',
      optional(sep1(',', $.variable_identifier)),
      choice(
        alias($.string, $.deprecated_message),
        $.deprecated_message_list
      ),
      '#-}'
    ),

    deprecated_message_list: $ => seq(
      '[',
      sep1(',', alias($.string, $.deprecated_message)),
      ']'
    ),

    warning_message_list: $ => seq(
      '[',
      sep1(',', alias($.string, $.warning_message)),
      ']'
    ),

    line_pragma: $ => seq(
      '{-#',
      'LINE',
      alias($.integer, $.line_number),
      alias($.string, $.file_name),
      '#-}'
    ),

    column_pragma: $ => seq(
      '{-#',
      'COLUMN',
      alias($.integer, $.column_number),
      '#-}'
    ),

    minimal_pragma: $ => seq(
      '{-#',
      'MINIMAL',
      repeat(
        choice(
          $._variable,
          $._constructor,
          $.conjunction,
          $.disjunction
        )
      ),
      '#-}'
    ),

    unpack_pragma: $ => seq(
      '{-#',
      'UNPACK',
      '#-}'
    ),

    no_unpack_pragma: $ => seq(
      '{-#',
      'NOUNPACK',
      '#-}'
    ),

    complete_pragma: $ => seq(
      '{-#',
      'COMPLETE',
      sep1(',', $._a_expression),
      '#-}'
    ),

    overlapping_pragma: $ => seq(
      '{-#',
      'OVERLAPPING',
      '#-}'
    ),

    overlappable_pragma: $ => seq(
      '{-#',
      'OVERLAPPABLE',
      '#-}'
    ),

    overlaps_pragma: $ => seq(
      '{-#',
      'OVERLAPS',
      '#-}'
    ),

    incoherent_pragma: $ => seq(
      '{-#',
      'INCOHERENT',
      '#-}'
    ),

    rules_pragma: $ => seq(
      '{-#',
      'RULES',
      $._layout_open_brace,
      repeat(seq($.rule, choice($._terminal, $._layout_semicolon))),
      $._layout_close_brace,
      '#-}'
    ),

    rule: $ => seq(
      alias($.string, $.name),
      optional($.phase_control),
      $.rule_pattern_variables,
      alias($._expression, $.rule_lhs),
      '=',
      alias($._expression, $.rule_rhs)
    ),

    rule_pattern_variables: $ => seq(
      'forall',
      repeat1(
        choice(
          alias($.variable_identifier, $.pattern_variable),
          $.pattern_variable_type_signature
        )
      ),
      '.'
    ),

    pattern_variable_type_signature: $ => seq(
      optional('('),
      alias($.variable_identifier, $.pattern_variable),
      alias('::', $.annotation),
      optional($.rule_pattern_variables),
      $._type_pattern,
      optional(')')
    ),

    // In this context, conjunction means both sides are required (AND).
    conjunction: $ => prec.left(2, seq(
      choice($._variable, $._constructor),
      ',',
      sep1(',', choice($._variable, $._constructor))
    )),

    // In this context, disjunction means only one side is required (OR).
    disjunction: $ => prec.left(1, seq(
      choice($._variable, $._constructor, $.conjunction),
      '|',
      sep1('|', choice($._variable, $._constructor, $.conjunction))
    )),

    phase_control: $ => seq(
      '[',
      $.integer,
      ']'
    ),

    eager_phase_control: $ => seq(
      '[',
      '~',
      $.integer,
      ']'
    ),

    header_file: $ => /("|<)[a-z].*\.h("|>)/,

    language_name: $ => /[A-Z](\w|')*/,
